// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationModals renders CANCEL_SELECTED_MODAL ConfirmationModals 1`] = `
<Fragment>
  <ConfirmModal
    action={[Function]}
    actionState="stopped"
    actionText="cancel"
    closeModal={[MockFunction]}
    id="ConfirmModal"
    selectedRowsLen={7}
  />
</Fragment>
`;

exports[`ConfirmationModals renders RESUME_MODAL ConfirmationModals 1`] = `
<Fragment>
  <ConfirmModal
    action={[Function]}
    actionState="running"
    actionText="resume"
    closeModal={[MockFunction]}
    id="ConfirmModal"
    selectedRowsLen={1}
  />
</Fragment>
`;

exports[`ConfirmationModals renders empty ConfirmationModals 1`] = `
<Fragment>
  <ConfirmModal
    action={[Function]}
    actionState=""
    actionText=""
    closeModal={[MockFunction]}
    id="ConfirmModal"
    selectedRowsLen={7}
  />
</Fragment>
`;
